--- a/index.html
+++ b/index.html
@@ -2,4 +2,9 @@
   <head>
     <title>Greeting from Karson Chaw</title>
   </head>
+  <body>
+    <p>
+      Greetings from Karson Chaw.
+    </p>
+  </body>
 </html>
